// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AITagView Calling AI Tags should disable btn if image dimensions are invalid 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    />
    <div
      class="Note__Note___2eSKN css-17t5ffy Note__Note--warning___3X53I"
      data-test-id="cf-ui-note"
    >
      <div
        class="Note__Note__icon___20RqC"
      >
        <svg
          class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--warning___39Bnz"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div
        class="Note__Note__info___2m_-K"
      >
        <div
          class="Note__Note__content___H1pf-"
        >
          Please make sure your image is less than 5MB and has dimensions of at least 80px for both width and height
        </div>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj css-1kr4fmq Button__Button--primary___JImeO Button__Button--disabled___1E20M"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9 ControlledInputField__ControlledInputField--disabled___HDWt6"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
      >
        <input
          aria-label="Overwrite existing tags"
          checked=""
          class="ControlledInput__ControlledInput___2XK3j ControlledInput__ControlledInput--disabled___3prPF"
          data-test-id="cf-ui-controlled-input"
          disabled=""
          id="overwrite-tags"
          type="checkbox"
          value=""
        />
        <label
          class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
          for="overwrite-tags"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--secondary___1ztcw"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView Calling AI Tags should disable btn if image is too big 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    />
    <div
      class="Note__Note___2eSKN css-17t5ffy Note__Note--warning___3X53I"
      data-test-id="cf-ui-note"
    >
      <div
        class="Note__Note__icon___20RqC"
      >
        <svg
          class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--warning___39Bnz"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div
        class="Note__Note__info___2m_-K"
      >
        <div
          class="Note__Note__content___H1pf-"
        >
          Please make sure your image is less than 5MB and has dimensions of at least 80px for both width and height
        </div>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj css-1kr4fmq Button__Button--primary___JImeO Button__Button--disabled___1E20M"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9 ControlledInputField__ControlledInputField--disabled___HDWt6"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
      >
        <input
          aria-label="Overwrite existing tags"
          checked=""
          class="ControlledInput__ControlledInput___2XK3j ControlledInput__ControlledInput--disabled___3prPF"
          data-test-id="cf-ui-controlled-input"
          disabled=""
          id="overwrite-tags"
          type="checkbox"
          value=""
        />
        <label
          class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
          for="overwrite-tags"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--secondary___1ztcw"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView Calling AI Tags should disable btn if image type is unsupported 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    />
    <div
      class="Note__Note___2eSKN css-17t5ffy Note__Note--warning___3X53I"
      data-test-id="cf-ui-note"
    >
      <div
        class="Note__Note__icon___20RqC"
      >
        <svg
          class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--warning___39Bnz"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
          />
        </svg>
      </div>
      <div
        class="Note__Note__info___2m_-K"
      >
        <div
          class="Note__Note__content___H1pf-"
        >
          Unfortunately, we can only auto-tag PNG and JPG file types
        </div>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj css-1kr4fmq Button__Button--primary___JImeO Button__Button--disabled___1E20M"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9 ControlledInputField__ControlledInputField--disabled___HDWt6"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
      >
        <input
          aria-label="Overwrite existing tags"
          checked=""
          class="ControlledInput__ControlledInput___2XK3j ControlledInput__ControlledInput--disabled___3prPF"
          data-test-id="cf-ui-controlled-input"
          disabled=""
          id="overwrite-tags"
          type="checkbox"
          value=""
        />
        <label
          class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
          for="overwrite-tags"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--secondary___1ztcw"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView Calling AI Tags should fetch tags and add them to current tags with overwrite option unchecked 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-1"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-1"
        >
          ai-tag-1
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-2"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-2"
        >
          ai-tag-2
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-3"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-3"
        >
          ai-tag-3
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="prior-tag"
          class="Pill__Pill__label____EsBZ"
          title="prior-tag"
        >
          prior-tag
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
        <svg
          class="Spinner__Spinner___32lpa Button__Button__spinner___3j8Aj undefined Spinner__Spinner--white___3Hsq3 Button__Button--spinner--exit___2RUI- Button__Button--spinner-exit-active___3HXa7"
          data-test-id="cf-ui-spinner"
          style="height: 18px; width: 18px;"
          viewBox="0 0 60 51"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Loading…
          </title>
          <g
            class="Spinner__circle1--translate___1u68A"
            transform="translate(10,33.528168)"
          >
            <g
              class="Spinner__circle1--scale___38WqL"
            >
              <circle
                id="circle1"
                r="6"
                transform="translate(0,10.471832)"
              />
            </g>
          </g>
          <g
            class="Spinner__circle2--translate___1GBUJ"
            transform="translate(30,33.528168)"
          >
            <g
              class="Spinner__circle2--scale___3khDl"
            >
              <circle
                id="circle2"
                r="6"
                transform="translate(0,10.471832)"
              />
            </g>
          </g>
          <g
            class="Spinner__circle3--translate___2M3jS"
            transform="translate(50,33.528168)"
          >
            <g
              class="Spinner__circle3--scale___2zFhX"
            >
              <circle
                id="circle3"
                r="6"
                transform="translate(0,10.471832)"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
      >
        <input
          aria-label="Overwrite existing tags"
          checked=""
          class="ControlledInput__ControlledInput___2XK3j"
          data-test-id="cf-ui-controlled-input"
          id="overwrite-tags"
          type="checkbox"
          value=""
        />
        <label
          class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
          for="overwrite-tags"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--white___3GVPJ"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView Calling AI Tags should fetch tags and overwrite current ones 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-1"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-1"
        >
          ai-tag-1
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-2"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-2"
        >
          ai-tag-2
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-3"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-3"
        >
          ai-tag-3
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
        <svg
          class="Spinner__Spinner___32lpa Button__Button__spinner___3j8Aj undefined Spinner__Spinner--white___3Hsq3 Button__Button--spinner--exit___2RUI- Button__Button--spinner-exit-active___3HXa7"
          data-test-id="cf-ui-spinner"
          style="height: 18px; width: 18px;"
          viewBox="0 0 60 51"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Loading…
          </title>
          <g
            class="Spinner__circle1--translate___1u68A"
            transform="translate(10,33.528168)"
          >
            <g
              class="Spinner__circle1--scale___38WqL"
            >
              <circle
                id="circle1"
                r="6"
                transform="translate(0,10.471832)"
              />
            </g>
          </g>
          <g
            class="Spinner__circle2--translate___1GBUJ"
            transform="translate(30,33.528168)"
          >
            <g
              class="Spinner__circle2--scale___3khDl"
            >
              <circle
                id="circle2"
                r="6"
                transform="translate(0,10.471832)"
              />
            </g>
          </g>
          <g
            class="Spinner__circle3--translate___2M3jS"
            transform="translate(50,33.528168)"
          >
            <g
              class="Spinner__circle3--scale___2zFhX"
            >
              <circle
                id="circle3"
                r="6"
                transform="translate(0,10.471832)"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
      >
        <input
          aria-label="Overwrite existing tags"
          checked=""
          class="ControlledInput__ControlledInput___2XK3j"
          data-test-id="cf-ui-controlled-input"
          id="overwrite-tags"
          type="checkbox"
          value=""
        />
        <label
          class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
          for="overwrite-tags"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--white___3GVPJ"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView Calling AI Tags should fetch tags and render them on btn click 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-1"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-1"
        >
          ai-tag-1
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-2"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-2"
        >
          ai-tag-2
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="ai-tag-3"
          class="Pill__Pill__label____EsBZ"
          title="ai-tag-3"
        >
          ai-tag-3
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
        <svg
          class="Spinner__Spinner___32lpa Button__Button__spinner___3j8Aj undefined Spinner__Spinner--white___3Hsq3 Button__Button--spinner--exit___2RUI- Button__Button--spinner-exit-active___3HXa7"
          data-test-id="cf-ui-spinner"
          style="height: 18px; width: 18px;"
          viewBox="0 0 60 51"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Loading…
          </title>
          <g
            class="Spinner__circle1--translate___1u68A"
            transform="translate(10,33.528168)"
          >
            <g
              class="Spinner__circle1--scale___38WqL"
            >
              <circle
                id="circle1"
                r="6"
                transform="translate(0,10.471832)"
              />
            </g>
          </g>
          <g
            class="Spinner__circle2--translate___1GBUJ"
            transform="translate(30,33.528168)"
          >
            <g
              class="Spinner__circle2--scale___3khDl"
            >
              <circle
                id="circle2"
                r="6"
                transform="translate(0,10.471832)"
              />
            </g>
          </g>
          <g
            class="Spinner__circle3--translate___2M3jS"
            transform="translate(50,33.528168)"
          >
            <g
              class="Spinner__circle3--scale___2zFhX"
            >
              <circle
                id="circle3"
                r="6"
                transform="translate(0,10.471832)"
              />
            </g>
          </g>
        </svg>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
      >
        <input
          aria-label="Overwrite existing tags"
          checked=""
          class="ControlledInput__ControlledInput___2XK3j"
          data-test-id="cf-ui-controlled-input"
          id="overwrite-tags"
          type="checkbox"
          value=""
        />
        <label
          class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
          for="overwrite-tags"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--white___3GVPJ"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView should add image tags on Enter 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="new tag"
          class="Pill__Pill__label____EsBZ"
          title="new tag"
        >
          new tag
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
      >
        <input
          aria-label="Overwrite existing tags"
          checked=""
          class="ControlledInput__ControlledInput___2XK3j"
          data-test-id="cf-ui-controlled-input"
          id="overwrite-tags"
          type="checkbox"
          value=""
        />
        <label
          class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
          for="overwrite-tags"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--white___3GVPJ"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView should disable everything if theres no image 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O TextInput__TextInput--disabled___2t7VS"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        disabled=""
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    />
    <button
      class="Button__Button___1ZfFj css-1kr4fmq Button__Button--primary___JImeO Button__Button--disabled___1E20M"
      data-test-id="cf-ui-button"
      disabled=""
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9 ControlledInputField__ControlledInputField--disabled___HDWt6"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
      >
        <input
          aria-label="Overwrite existing tags"
          checked=""
          class="ControlledInput__ControlledInput___2XK3j ControlledInput__ControlledInput--disabled___3prPF"
          data-test-id="cf-ui-controlled-input"
          disabled=""
          id="overwrite-tags"
          type="checkbox"
          value=""
        />
        <label
          class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
          for="overwrite-tags"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--secondary___1ztcw"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView should enable everything if theres an image 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    />
    <button
      class="Button__Button___1ZfFj css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
      >
        <input
          aria-label="Overwrite existing tags"
          checked=""
          class="ControlledInput__ControlledInput___2XK3j"
          data-test-id="cf-ui-controlled-input"
          id="overwrite-tags"
          type="checkbox"
          value=""
        />
        <label
          class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
          for="overwrite-tags"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--white___3GVPJ"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView should ignore duplicate image tags 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="tag1"
          class="Pill__Pill__label____EsBZ"
          title="tag1"
        >
          tag1
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="tag2"
          class="Pill__Pill__label____EsBZ"
          title="tag2"
        >
          tag2
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
      >
        <input
          aria-label="Overwrite existing tags"
          checked=""
          class="ControlledInput__ControlledInput___2XK3j"
          data-test-id="cf-ui-controlled-input"
          id="overwrite-tags"
          type="checkbox"
          value=""
        />
        <label
          class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
          for="overwrite-tags"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--white___3GVPJ"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AITagView should render image tags if available 1`] = `
<div>
  <div
    class="css-qslnu8"
  >
    <div
      class="TextInput__TextInput___36-K- TextInput__TextInput--large___KwY4O"
    >
      <input
        class="TextInput__TextInput__input___27vDB a11y__focus-border--default___60AXp"
        data-test-id="image-tag"
        placeholder="Type a tag and press enter"
        value=""
      />
    </div>
    <div
      class="css-m9mlq4"
    >
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="tag1"
          class="Pill__Pill__label____EsBZ"
          title="tag1"
        >
          tag1
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Pill__Pill___2yQFD a11y__focus-outline--default___2hwb1 css-wqjilo"
        data-test-id="cf-ui-pill"
      >
        <span
          aria-label="tag2"
          class="Pill__Pill__label____EsBZ"
          title="tag2"
        >
          tag2
        </span>
        <button
          aria-label="close"
          class="Pill__Pill__close-button___3OlnQ a11y__focus-outline--default___2hwb1"
          type="button"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            <svg
              class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--muted___3egnD Pill__Pill__icon___1NILR"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <button
      class="Button__Button___1ZfFj css-1kr4fmq Button__Button--primary___JImeO"
      data-test-id="cf-ui-button"
      id="fetch-tag-btn"
      type="button"
    >
      <span
        class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
        tabindex="-1"
      >
        <span
          class="Button__Button__label___3tcOj"
        >
          Auto-tag from AI
        </span>
      </span>
    </button>
    <div
      class="ControlledInputField__ControlledInputField___2uIG9"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="ControlledInput__Checkbox___ra2TY ControlledInputField__ControlledInputField__input___3OMYB"
      >
        <input
          aria-label="Overwrite existing tags"
          checked=""
          class="ControlledInput__ControlledInput___2XK3j"
          data-test-id="cf-ui-controlled-input"
          id="overwrite-tags"
          type="checkbox"
          value=""
        />
        <label
          class="ControlledInput__Input__ghost___2bBB9 ControlledInput__Checkbox__ghost___1Oqlk"
          for="overwrite-tags"
        >
          <svg
            class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--white___3GVPJ"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52"
          data-test-id="cf-ui-form-label"
          for="overwrite-tags"
        >
          Overwrite existing tags
        </label>
      </div>
    </div>
  </div>
</div>
`;
